package yoga1290.commons.services;


//@Service
//@ConditionalOnMissingBean
public class UserDetailsServiceImpl
//        implements UserDetailsService
{
//    @Override
//    public UserDetails loadUserByUsername(String s) throws UsernameNotFoundException {
//        //TODO
//        return User.builder().build();
//    }
}
