package yoga1290.coresystem.services;

public interface IService {

}
