@startuml

hide empty fields
hide empty methods

package "Spring App/Microservice" as PluginApp {


  package "Your Plugin package" as PluginPackage {
    class MyController {}
    class MyEmailHandler {}
    class RequestService <RequestPayload, ResponsePayload> {
      - bearerAuthToken: string
      - basicAuthPassword: string
      - basicAuthPassword: string
      - requestURL: string
    }
  }

  package "Core System (dependency)" as CoreSystem {

    abstract AbstractClientRequestService <RequestPayload, ResponsePayload> {
      + doRequest(RequestPayload): ResponsePayload
      + doJakartaBeanValidation() throws RestClientResponseException
    }
    abstract AbstractEmailHandler
    abstract AbstractEndpoint
    class EmailListenerService
    interface IService
    package "Health Check/Indicators (Actuator)" as Health {}
    package "AOP Logging" as logger {}
    package "Thread Pool" as threadpool {}
    package "RestTemplate" {}
    package "Web Security" as WSecurity {
      class UserDetailsService {}
      class JwtRequestFilter {}
    }    
  }

  IService ..> logger
  AbstractEndpoint ..> logger
  AbstractEndpoint --> WSecurity
  AbstractClientRequestService ..> logger
  AbstractClientRequestService --o "RestTemplate"
  AbstractClientRequestService --o threadpool
  AbstractEmailHandler --o threadpool
  AbstractEmailHandler ..> logger
  Health ..> logger

  EmailListenerService --o AbstractEmailHandler
  MyController ..|> AbstractEndpoint
  MyEmailHandler ..|> AbstractEmailHandler
  RequestService ..|>  AbstractClientRequestService

}


database "app.properties (or Env Var)" as config {
   json Security {
    "security.roles.[]": "<ROLE>, <URI-1>, <URI-2>,.."
   }

   json "Th
@Service
public class RecaptchClientService extends AbstractClientRequestService<RecaptchRequest, RecaptchResponse> {


    private String apiKey;
    private String siteKey;
    public RecaptchClientService(
            @Value("${yoga1290.client-service.recaptcha-api-key:}")
            String apiKey,
            @Value("${yoga1290.client-service.recaptcha-site-key:}")
            String siteKey,
            RestTemplate restTemplate) {
        super(new RecaptchResponse(), restTemplate);
        this.apiKey = apiKey;
        this.siteKey = siteKey;
    }

    public ResponseEntity<RecaptchResponse> doVerify(final String verifyToken) {
        // SEE https://console.cloud.google.com/security/recaptcha

        String requestUrl = String.format(
                            "https://recaptchaenterprise.googleapis.com/v1/projects/videoquotes/assessments?key=%s",
                                   apiKey);

        RecaptchRequest.Event recaptchRequestEvent =
                                        RecaptchRequest.Event.builder()
                                            .token(verifyToken)
                                            .siteKey(siteKey).build();
        RecaptchRequest recaptchRequest =
                                        RecaptchRequest.builder()
                                            .event(recaptchRequestEvent).build();

        return this.doPost(requestUrl, recaptchRequest);
    }

}read Pool" as ThreadPool {
    "thread-pool.core-pool-size": "INT",
    "thread-pool.max-pool-size": "INT",
    "thread-pool.queue-capacity": "INT"
   }

   json Logger {
    "..log-pattern": "STRING",
    "..max-file-size": "INT",
    "..total-size-cap": "INT"
   }

   json "Email Sender/Listener" as EmailConfig {
    "email-service.email": "STRING",
    "email-service.password": "STRING"
   }
}

PluginApp <-- config

@enduml